add some html and css whtout any realy avance

--- a/indix.html
+++ b/indix.html
@@ -8,15 +8,30 @@
 </head>
 <body>
     <main>
+
         <nav>
             <div class="nav">
                 <h1>LE GOURMET</h1>
                 <div class="nav__cherch">
-                    <input type="text">
+                    <input type="text" placeholder="cherch name" >
                 </div>
             </div>
         </nav>
 
+        <section>
+            <div class="callendri">
+                <div class="days activ">
+                    <span class="courrent__date"></span>
+                    <div></div>
+                </div>
+                <div class="days activ"></div>
+                <div class="days activ"></div>
+                <div class="days activ"></div>
+                <div class="days activ"></div>
+                <div class="days"></div>
+                <div class="days"></div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
