add somme transitions en les card

--- a/indix.html
+++ b/indix.html
@@ -19,18 +19,31 @@
         </nav>
 
         <section>
+            <div>
+
+            </div>
+
+
             <div class="callendri">
                 <div class="days activ">
-                    <span class="courrent__date"></span>
-                    <div></div>
+                    <div>
+                    <span class="courrent__date"> 23 VEN oct</span>
+                    </div>
+                    <div class="detaille__reservation">
+                        <span>13:00</span>
+                        <span>vip</span>
+                        <span class="nemr__UserReserver">ana li mreserver</span>
+                    </div>
                 </div>
                 <div class="days activ"></div>
                 <div class="days activ"></div>
                 <div class="days activ"></div>
                 <div class="days activ"></div>
-                <div class="days"></div>
-                <div class="days"></div>
+                <div class="days unactive"></div>
+                <div class="days unactive"></div>
             </div>
+
+
         </section>
     </main>
 </body>
