resume sur html css

--- a/indix.html
+++ b/indix.html
@@ -12,27 +12,34 @@
         <nav>
             <div class="nav">
                 <h1>LE GOURMET</h1>
-                <div class="nav__cherch">
-                    <input type="text" placeholder="cherch name" >
-                </div>
             </div>
         </nav>
 
         <section>
-            <div>
-
+            <div class="nav__reserver">
+                <h1>RESERVATION DANS LE GOURMET</h1>
+                <button>reservations</button>
+                <div class="nav__reserver--nomDays">
+                    <h4>Lundi</h4>
+                    <h4>Mardi</h4>
+                    <h4>Mercredi</h4>
+                    <h4>Jeudi</h4>
+                    <h4>Vendredi</h4>
+                    <h4>Samedi</h4>
+                    <h4>Dimanche</h4>
+                </div>
             </div>
 
 
             <div class="callendri">
                 <div class="days activ">
-                    <div>
-                    <span class="courrent__date"> 23 VEN oct</span>
+                    <div class="courrent__date">
+                        <span> 23 VEN oct</span>
                     </div>
                     <div class="detaille__reservation">
                         <span>13:00</span>
                         <span>vip</span>
-                        <span class="nemr__UserReserver">ana li mreserver</span>
+                        <span>ana li mreserver</span>
                     </div>
                 </div>
                 <div class="days activ"></div>
