start at the formular on html cs

--- a/indix.html
+++ b/indix.html
@@ -41,6 +41,12 @@
                         <span>vip</span>
                         <span>ana li mreserver</span>
                     </div>
+                    
+                    <div class="detaille__reservation">
+                        <span>13:00</span>
+                        <span>vip</span>
+                        <span>ana li mreserver</span>
+                    </div>
                 </div>
                 <div class="days activ"></div>
                 <div class="days activ"></div>
@@ -52,6 +58,28 @@
 
 
         </section>
+
+
+        <section>
+            <div>
+                <h3>Nouvelle réservation</h3>
+                <form action="#">
+                    di
+                    <label for="username">Nom du client</label>
+                    <input id="username" type="text">
+                    <label for="username">Heure de début</label>
+                    <select name="hours" id="heurdebut"></select>
+                    <label for="heurdefin">Heure de fin</label>
+                    <select name="hours" id="heurdefin"></select>
+                    <label for="typereserve">Type de réservation</label>
+                    <select name="type" id="typereserve"></select>
+                    
+                    <button type="submit" >Ajouter la réservation </button>
+                </form>
+            </div>
+        </section>
+
+
     </main>
 </body>
 </html>
