--- a/indix.html
+++ b/indix.html
@@ -61,18 +61,61 @@
 
 
         <section>
-            <div>
+            <div class="form_reservation">
                 <h3>Nouvelle réservation</h3>
                 <form action="#">
-                    di
-                    <label for="username">Nom du client</label>
-                    <input id="username" type="text">
-                    <label for="username">Heure de début</label>
-                    <select name="hours" id="heurdebut"></select>
-                    <label for="heurdefin">Heure de fin</label>
-                    <select name="hours" id="heurdefin"></select>
-                    <label for="typereserve">Type de réservation</label>
-                    <select name="type" id="typereserve"></select>
+                    <div>
+                        <label for="username">Nom du client</label>
+                        <input id="username" type="text">
+                    </div>
+
+                    <div>
+                        <label for="username">Heure de début</label>
+                        <select name="hours" id="heurdebut">
+                            <option value="">--:--</option>
+                            <option value="11:00">11:00</option>
+                            <option value="12:00">12:00</option>
+                            <option value="13:00">13:00</option>
+                            <option value="14:00">14:00</option>
+                            <option value="15:00">15:00</option>
+                            <option value="16:00">16:00</option>
+                            <option value="17:00">17:00</option>
+                            <option value="18:00">18:00</option>
+                            <option value="19:00">19:00</option>
+                            <option value="20:00">20:00</option>
+                            <option value="21:00">21:00</option>
+                            <option value="22:00">22:00</option>
+                        </select>
+                    </div>
+
+                    <div>
+                        <label for="heurdefin">Heure de fin</label>
+                        <select name="hours" id="heurdefin">
+                            <option value="">--:--</option>
+                            <option value="11:00">11:00</option>
+                            <option value="12:00">12:00</option>
+                            <option value="13:00">13:00</option>
+                            <option value="14:00">14:00</option>
+                            <option value="15:00">15:00</option>
+                            <option value="16:00">16:00</option>
+                            <option value="17:00">17:00</option>
+                            <option value="18:00">18:00</option>
+                            <option value="19:00">19:00</option>
+                            <option value="20:00">20:00</option>
+                            <option value="21:00">21:00</option>
+                            <option value="22:00">22:00</option>
+                        </select>
+                    </div>
+
+                    <div>
+                        <label for="typereserve">Type de réservation</label>
+                        <select name="type" id="typereserve">
+                            <option value="">-- Sélectionnez --</option>
+                            <option value="sur place">Sur place</option>
+                            <option value="VIP">VIP</option>
+                            <option value="anniversaire">Anniversaire</option>
+                        </select>
+                    </div>
                     
                     <button type="submit" >Ajouter la réservation </button>
                 </form>
