--- a/indix.html
+++ b/indix.html
@@ -61,12 +61,23 @@
 
 
         <section>
-            <div class="form_reservation">
+            <div class="formReservation">
                 <h3>Nouvelle réservation</h3>
-                <form action="#">
+                <form class="form-input" action="#">
                     <div>
                         <label for="username">Nom du client</label>
                         <input id="username" type="text">
+                    </div>
+
+                    <div>
+                        <label for="username">Heure de début</label>
+                        <select name="hours" id="heurdebut">
+                            <option value="Lundi">Lundi</option>
+                            <option value="Mardi">Mardi</option>
+                            <option value="Mercredi">Mercredi</option>
+                            <option value="Jeudi">Jeudi</option>
+                            <option value="Vendredi">Vendredi</option>
+                        </select>
                     </div>
 
                     <div>
@@ -110,7 +121,7 @@
                     <div>
                         <label for="typereserve">Type de réservation</label>
                         <select name="type" id="typereserve">
-                            <option value="">-- Sélectionnez --</option>
+                            <option value="">Sélectionnez</option>
                             <option value="sur place">Sur place</option>
                             <option value="VIP">VIP</option>
                             <option value="anniversaire">Anniversaire</option>
