fix all beuge of

--- a/indix.html
+++ b/indix.html
@@ -60,11 +60,11 @@
         </section>
 
 
-        <section>
+        <section class="sectionform">
             <div class="formReservation">
                 <h3>Nouvelle réservation</h3>
                 <form class="form-input" action="#">
-                    <div>
+                    <div class="form-input-modif">
                         <label for="username">Nom du client</label>
                         <input id="username" type="text">
                     </div>
