--- a/indix.html
+++ b/indix.html
@@ -18,7 +18,7 @@
         <section>
             <div class="nav__reserver">
                 <h1>RESERVATION DANS LE GOURMET</h1>
-                <button>reservations</button>
+                <button id="buttonReserver">reservations</button>
                 <div class="nav__reserver--nomDays">
                     <h4>Lundi</h4>
                     <h4>Mardi</h4>
@@ -33,13 +33,13 @@
 
             <div class="callendri">
                 <div class="days activ">
+
                     <div class="courrent__date">
                     </div>
                     <div class="detaille__reservation">
-                        
                     </div>
-                    
                     <div class="detaille__reservation"></div>
+
                 </div>
                 <div class="days activ"></div>
                 <div class="days activ"></div>
