start at the popup

--- a/indix.html
+++ b/indix.html
@@ -55,7 +55,7 @@
 
         <section class="sectionform">
             <div class="formReservation">
-                <span class="closs__form">&times;</span>
+                <span id="close__pop" class="closs__form">&times;</span>
                 <h3>Nouvelle réservation</h3>
                 <form class="form-input" action="#">
                     <div class="form-input-modif">
