add the verificatoons of form

--- a/indix.html
+++ b/indix.html
@@ -64,8 +64,8 @@
                     </div>
 
                     <div class="form-input-modif">
-                        <label for="username">day pour reservations</label>
-                        <select name="hours" id="heurdebut" required>
+                        <label for="day-resrve">day pour reservations</label>
+                        <select name="hours" id="day-resrve" required>
                             <option value="">----</option>
                             <option value="Lundi">Lundi</option>
                             <option value="Mardi">Mardi</option>
