add the popup at the div days and automatique select days by div chois

--- a/indix.html
+++ b/indix.html
@@ -34,11 +34,11 @@
             <div class="callendri">
                 <div class="days activ">
 
-                    <div class="courrent__date">
+                    <!-- <div class="courrent__date">
                     </div>
                     <div class="detaille__reservation">
                     </div>
-                    <div class="detaille__reservation"></div>
+                    <div class="detaille__reservation"></div> -->
 
                 </div>
                 <div class="days activ"></div>
