annuler la fonctions de affichage est start feom begginer

--- a/indix.html
+++ b/indix.html
@@ -32,21 +32,13 @@
 
 
             <div class="callendri">
-                <div class="days activ">
-
-                    <!-- <div class="courrent__date">
-                    </div>
-                    <div class="detaille__reservation">
-                    </div>
-                    <div class="detaille__reservation"></div> -->
-
-                </div>
-                <div class="days activ"></div>
-                <div class="days activ"></div>
-                <div class="days activ"></div>
-                <div class="days activ"></div>
-                <div class="days unactive"></div>
-                <div class="days unactive"></div>
+                <div class="days activ" data-day="Lundi"></div>
+                <div class="days activ" data-day="Mardi"></div>
+                <div class="days activ" data-day="Mercredi"></div>
+                <div class="days activ" data-day="Jeudi"></div>
+                <div class="days activ" data-day="Vendredi"></div>
+                <div class="days unactive" data-day="Samedi"></div>
+                <div class="days unactive" data-day="Dimanche"></div>
             </div>
 
 
