bug at the delete

--- a/indix.html
+++ b/indix.html
@@ -196,7 +196,7 @@
                     </div>
                     <div class="">
                         <button type="submit" class="modifier" >Enregistrer</button>
-                        <button type="" class="supprumer" >Supprumer reservations</button>
+                        <button type="button" class="supprumer" >Supprumer reservations</button>
                     </div>
 
                 </form>
