fix beug transitions

--- a/indix.html
+++ b/indix.html
@@ -19,26 +19,38 @@
             <div class="nav__reserver">
                 <h1>RESERVATION DANS LE GOURMET</h1>
                 <button id="buttonReserver">reservations</button>
-                <div class="nav__reserver--nomDays">
-                    <h4>Lundi</h4>
-                    <h4>Mardi</h4>
-                    <h4>Mercredi</h4>
-                    <h4>Jeudi</h4>
-                    <h4>Vendredi</h4>
-                    <h4>Samedi</h4>
-                    <h4>Dimanche</h4>
-                </div>
             </div>
 
 
             <div class="callendri">
-                <div class="days activ" data-day="Lundi"></div>
-                <div class="days activ" data-day="Mardi"></div>
-                <div class="days activ" data-day="Mercredi"></div>
-                <div class="days activ" data-day="Jeudi"></div>
-                <div class="days activ" data-day="Vendredi"></div>
-                <div class="days unactive" data-day="Samedi"></div>
-                <div class="days unactive" data-day="Dimanche"></div>
+                <div class="evrrycartdays">
+                    <h4>Lundi</h4>
+                    <div class="days activ" data-day="Lundi"></div>
+                </div>
+                <div class="evrrycartdays">
+                    <h4>Mardi</h4>
+                    <div class="days activ" data-day="Mardi"></div>
+                </div>
+                <div class="evrrycartdays">
+                    <h4>Mercredi</h4>
+                    <div class="days activ" data-day="Mercredi"></div>
+                </div>
+                <div class="evrrycartdays">
+                    <h4>Jeudi</h4>
+                    <div class="days activ" data-day="Jeudi"></div>
+                </div>
+                <div class="evrrycartdays">
+                    <h4>Vendredi</h4>
+                    <div class="days activ" data-day="Vendredi"></div>
+                </div>
+                <div class="evrrycartdays">
+                    <h4>Samedi</h4>
+                    <div class="days unactive" data-day="Samedi"></div>
+                </div>
+                <div class="evrrycartdays">
+                    <h4>Dimanche</h4>
+                    <div class="days unactive" data-day="Dimanche"></div>
+                </div>
             </div>
 
 
