fix beug verifications

--- a/indix.html
+++ b/indix.html
@@ -118,6 +118,12 @@
                     </div>
 
                     <div class="form-input-modif">
+                        <label for="typereserve">Nombre </label>
+                        <input type="number" min="1" name="" id="" >
+
+                    </div>
+
+                    <div class="form-input-modif">
                         <label for="typereserve">Type de réservation</label>
                         <select name="type" id="typereserve" required>
                             <option value="">Sélectionnez</option>
