add the input of number player

--- a/indix.html
+++ b/indix.html
@@ -118,8 +118,8 @@
                     </div>
 
                     <div class="form-input-modif">
-                        <label for="typereserve">Nombre </label>
-                        <input type="number" min="1" name="" id="" >
+                        <label for="nombreprsn">Nombre De Personnes</label>
+                        <input type="number" min="1" name="" id="nombreprsn" >
 
                     </div>
 
@@ -201,6 +201,12 @@
                             <option value="21:00">21:00</option>
                             <option value="22:00">22:00</option>
                         </select>
+                    </div>
+
+                    <div class="form-input-modif">
+                        <label for="modif-nombreprsn">Nombre De Personnes</label>
+                        <input type="number" min="1" name="" id="modif-nombreprsn" >
+
                     </div>
 
                     <div class="form-input-modif">
